--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,12 +34,36 @@ a:hover{
 }
 }
 
+.top-top{
+    background-color: #8c3432;
+    height: 60px;
+}
+.top-top a:hover,.top-top a:visited{color: #f1e9e9}
+.top-top .fitst-li{
+    list-style: none;
+    float: left;
+    margin-left: 5px;
+}
+.top-top li img{
+    border-radius: 60px;
+}
+.top-top .dropdown{
+    color: #f1e9e9;
+    font-size: 16px;
+    line-height: 60px;
+}
+.top-top .dropdown-menu a{
+    color: #8c3432;
+}
+.top-top .dropdown-menu li:hover{
+    background-color: red;
+}
 .header-header{
     background-color: #8c3432;
-    height: 375px;
+    height: 320px;
 }
 header .header_middle{
-    padding: 60px 0 0;
+    padding: 30px 0 0;
     margin: 0 auto;
     width: 350px;
 }
